--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background-color: white;
         }
     </style>
-    <title>Bevy game</title> <!-- ToDo -->
+    <title>Bad Software</title>
 </head>
 <body>
     <script>
